--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,6 +11,11 @@
     --line-height: 1.5;
 }
 
+html {
+    padding: 0;
+    margin: 0;
+}
+
 *,
 *::before,
 *::after {
@@ -26,6 +31,8 @@ body {
     background: var(--color-background);
     color: var(--color-text);
     width: 100vw;
+    padding: 0;
+    margin: 0;
 }
 
 a {
